@@ -4,104 +4,12 @@
   <parent>
     <artifactId>molgenis</artifactId>
     <groupId>org.molgenis</groupId>
-    <version>9.1.0-SNAPSHOT</version>
+    <version>10.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>molgenis-api-tests</artifactId>
   <description>API integration test test-module.</description>
 
   <name>api-tests</name>
-
-  <profiles>
-    <!-- Profile create-it-db (active by default) creates a new postgres database and drops it after running the tests -->
-    <profile>
-      <id>create-it-db</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <!-- override the it db name and create new database for the test run -->
-        <maven.build.timestamp.format>yyMMddHHmmssSSS</maven.build.timestamp.format>
-        <it_db_name>molgenis_apitest_${maven.build.timestamp}</it_db_name>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>sql-maven-plugin</artifactId>
-            <version>${sql-maven-plugin.version}</version>
-            <configuration>
-              <skip>${skipITs}</skip>
-            </configuration>
-            <executions>
-              <execution>
-                <id>create postgres integration database</id>
-                <phase>pre-integration-test</phase>
-              </execution>
-              <execution>
-                <id>drop postgres integration database</id>
-                <phase>post-integration-test</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <!-- Profile create-it-es (active by default) creates new elasticsearch instance and drops it after the tests -->
-    <profile>
-      <id>create-it-es</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <properties>
-        <!-- override the cluster name for the test run -->
-        <maven.build.timestamp.format>yyMMddHHmmssSSS</maven.build.timestamp.format>
-        <elasticsearch.cluster.name>apitest${maven.build.timestamp}</elasticsearch.cluster.name>
-        <elasticsearch.transport.addresses>localhost:@elasticsearch.tcp.port@
-        </elasticsearch.transport.addresses>
-      </properties>
-      <build>
-        <plugins>
-          <!-- Reserve network ports -->
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <version>${build-helper-maven-plugin.version}</version>
-            <configuration>
-              <skip>${skipITs}</skip>
-            </configuration>
-            <executions>
-              <execution>
-                <id>reserve-network-port</id>
-                <goals>
-                  <goal>reserve-network-port</goal>
-                </goals>
-                <phase>process-resources</phase>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- Start and stop elasticsearch instance -->
-          <plugin>
-            <groupId>com.github.alexcojocaru</groupId>
-            <artifactId>elasticsearch-maven-plugin</artifactId>
-            <version>${elasticsearch-maven-plugin.version}</version>
-            <configuration>
-              <skip>${skipITs}</skip>
-            </configuration>
-            <executions>
-              <execution>
-                <id>start-elasticsearch</id>
-                <phase>pre-integration-test</phase>
-              </execution>
-              <execution>
-                <id>stop-elasticsearch</id>
-                <phase>post-integration-test</phase>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
   <build>
     <testResources>
@@ -162,32 +70,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- Dependency plugin extracts elasticsearch configuration resources -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <configuration>
-          <skip>${skipITs}</skip>
-        </configuration>
-        <executions>
-          <execution>
-            <id>unpack</id>
-            <phase>package</phase>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <configuration>
-              <includeGroupIds>${project.groupId}</includeGroupIds>
-              <includeArtifactIds>molgenis-data-elasticsearch</includeArtifactIds>
-              <excludeTransitive>true</excludeTransitive>
-              <overWrite>true</overWrite>
-              <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
-              <includes>conf/**</includes>
-              <type>test-jar</type>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <!-- Cargo plugin runs Tomcat -->
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
@@ -214,8 +96,7 @@
               </configfile>
             </configfiles>
             <properties>
-              <cargo.start.jvmargs>-Xmx2g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
-              </cargo.start.jvmargs>
+              <cargo.start.jvmargs>-Xmx2g</cargo.start.jvmargs>
               <cargo.tomcat.uriencoding>UTF-8</cargo.tomcat.uriencoding>
               <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
               <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
@@ -276,7 +157,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>--illegal-access=permit</argLine>
           <systemPropertyVariables>
             <REST_TEST_HOST>http://localhost:${cargo.servlet.port}</REST_TEST_HOST>
           </systemPropertyVariables>
